# nacos-mcp-router

./: .gitignore  README.md  README_cn.md  pyproject.toml
.github/workflows/: build.yml  docker-image.yml  release.yml
src/nacos-mcp-router/: __init__.py  logger.py  mcp_manager.py  md5_util.py  nacos_http_client.py  nacos_mcp_server_config.py  router.py  router_types.py
src/nacos_mcp_router/: __init__.py  __main__.py  logger.py  mcp_manager.py  nacos_http_client.py  nacos_mcp_server_config.py  router.py  router_types.py
src/nacos_mcp_router_typescript/: CHANGELOG.md  README.md  package-lock.json  package.json  publish.sh  tsconfig.json
src/nacos_mcp_router_typescript/src/: config.ts  index.ts  logger.ts  mcp_manager.ts  memory_vector.ts  nacos_http_client.ts  nacos_mcp_server_config.ts  router.ts  router_types.ts  simpleSseServer.ts  stdio.ts  studio.ts  tool_manager.ts  types.ts
src/python/: .python-version  Dockerfile  README.md  README_cn.md  pyproject.toml
src/python/docs/: troubleshooting.md
src/python/src/nacos_mcp_router/: __init__.py  __main__.py  auth.py  constants.py  logger.py  mcp_manager.py  md5_util.py  nacos_http_client.py  nacos_mcp_server_config.py  router.py  router_exceptions.py  router_types.py
src/python/src/tests/: test_nacos_http_client.py  test_streamable_http.py
src/typescript/: CHANGELOG.md  jest.config.js  jest.config.ts  package-lock.json  package.json  publish.sh  tsconfig.json  tsconfig.test.json
src/typescript/coverage/: clover.xml  lcov.info  (+1 more)
typescript/: package-lock.json  package.json
typescript/src/: index.ts
(+60 files in other folders)
